Search optimization changes M1 code No test case added
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@10365 a8845c50-7012-0410-95d3-8e1449b9b1e4